--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mdp40">
+        <activity android:name=".MapGeneration.MapInit"></activity>
         <activity
             android:name=".BlueTooth.BlueTooth"
             android:exported="true">
