rotate, drag, robot added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Mdp40">
         <activity android:name=".MapGeneration.MapInit"></activity>
         <activity
-            android:name=".BlueTooth.BlueTooth"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
