New BlueTooth Tryout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
 
         <activity android:name=".BlueTooth.BlueTooth" />
         <activity android:name=".BlueTooth.BTImage" />
-        <activity android:name=".MapGeneration.MapInit" />
+
+        <activity
+            android:name=".bluetooth40.BluetoothDeviceActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"
+          ></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
