--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
           ></activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"
+            ></activity>
+        <activity
+            android:name=".splashActivity"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
